--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emailjs/browser": "^4.4.1",
     "next": "^15.4.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
